# quiver

./: .chat-transcript.md  .gitignore  NOTICE  README.md  pyproject.toml  stream.py  wal.py  wire.py
.github/workflows/: ci.yml
compiler/: gen_templates.py
docs/: BENCH-IREN.md  PLAN.md
exec/: Makefile
nock/: __init__.py
pupyarrow/: file_reader.py
quiver/: cli.py  stream.py  tools.py  wire.py
quiver/compiler/: gen_templates.py
quiver/exec/: Makefile  quiver-exec.c
quiver/nock/: footer.py  format.py  zframe.py  zserve.py
quiver/pupyarrow/: __init__.py  fb.py  reader.py  writer.py
quiver/remotes/: multi.py
quiver/tests/: bench-weka.sh  bench.py  oracle.py  run_all.py  wekaprobe.bt
remotes/: s3.py  ssh.py
tests/: run_all.py
